--- a/src/app.css
+++ b/src/app.css
@@ -1,24 +1,24 @@
 @import 'tailwindcss';
 
 @theme {
-	--color-front: #242424;
+	--color-accent: var(--color-purple);
 	--color-back: #ededed;
+	--color-front: #242424;
 	--color-orange: hsl(16, 100%, 50%);
 	--color-purple: hsl(330, 100%, 35%);
-	--font-sans: 'Source Sans Pro';
-	--font-serif: 'Source Serif 4';
-	--font-merriweather: 'Merriweather Variable', serif;
+	--default-font-family: var(--font-serif);
 	--font-fjalla: 'Fjalla One', serif;
 	--font-geist-mono: 'Geist Mono Variable', monospace;
 	--font-inter-tight: 'Inter Tight Variable', sans-serif;
-	--default-font-family: var(--font-serif);
+	--font-merriweather: 'Merriweather Variable', serif;
+	--font-sans: 'Source Sans Pro';
 	--font-sans: var(--font-inter-tight);
-	--color-accent: var(--color-purple);
+	--font-serif: 'Source Serif 4';
 }
 
 .trim {
-	text-box-trim: trim-both;
 	text-box-edge: cap alphabetic;
+	text-box-trim: trim-both;
 }
 .pile {
 	display: grid;
@@ -27,78 +27,51 @@
 	}
 }
 html {
-	color: var(--color-front);
 	background: var(--color-back);
+	color: var(--color-front);
 	font-size: 18px;
 }
 
 article {
-	--font-size: 16px;
-	--line-height: 1.4;
 	--computed-line-height: calc(var(--font-size) * var(--line-height));
 	--drop-cap-size: calc(4.2 * var(--computed-line-height));
+	--font-size: 16px;
+	--line-height: 1.4;
+	font-family: var(--font-merriweather);
 	font-size: var(--font-size);
 	line-height: var(--line-height);
-	font-family: var(--font-merriweather);
+	text-wrap: pretty;
 	h1 {
 		font-family: var(--font-merriweather);
-		font-size: 4rem;
-		margin: 4rcap 0 2rcap 0;
 		font-weight: normal;
+		margin: 4rcap 0 2rcap 0;
 		text-transform: uppercase;
 	}
 	h2 {
 		font-family: var(--font-fjalla);
 		font-size: 1.5rem;
-		margin: 4rex 0 2rex 0;
 		font-weight: bold;
+		margin: 4rex 0 2rex 0;
 	}
 	.cap:first-letter {
 		--repeating-linear-gradient: transparent 0, transparent 3px, var(--color-accent) 4px;
-		font-size: var(--drop-cap-size);
-		font-weight: 700;
-		line-height: 1;
-		padding: 1rex 1rch;
-		margin-right: 1rch;
-		border: 1px solid;
-		float: left;
 		background-clip: text;
 		background:
 			repeating-linear-gradient(45deg, var(--repeating-linear-gradient)),
 			repeating-linear-gradient(-45deg, var(--repeating-linear-gradient));
+		border: 1px solid;
+		float: left;
+		font-size: var(--drop-cap-size);
+		font-weight: 700;
+		line-height: 1;
+		margin-right: 1rch;
+		padding: 1rex 1rch;
 		text-shadow: 2px 1px 0 white;
 	}
 	p {
 		grid-column: 1;
 		& + p {
 			text-indent: 2rem;
-		}
-	}
-	sup {
-		color: var(--color-accent);
-	}
-	.footnote {
-		anchor-name: --footnote1;
-	}
-	.footnote-section {
-		top: anchor(--footnote1 top);
-		left: anchor(--footnote1 left);
-		right: 0;
-		position: absolute;
-		color: #484848;
-		border-top: 1px dashed currentColor;
-		span {
-			font-size: 0.7rem;
-			line-height: 1.4;
-			padding: 2rex 2rch;
-			margin: 0;
-			width: 30rch;
-			display: block;
-			right: 0;
-			border: 1px dashed;
-			border-top: none currentColor;
-			background: wheat;
-			position: absolute;
 		}
 	}
 	figure {
@@ -114,17 +87,52 @@ article {
 			border: 1px solid rgb(0 0 0 / 10%);
 		}
 		figcaption {
-			font-size: 0.8rem;
-			padding: 1rex 0;
 			color: #666;
+			font-size: 0.8rem;
 			margin-bottom: 2rex;
+			padding: 1rex 0;
 		}
-		a {
-			color: var(--color-accent);
-			text-decoration: none;
-			&:hover {
-				text-decoration: underline;
-			}
+	}
+	a {
+		color: var(--color-accent);
+		text-decoration: underline;
+		text-underline-offset: 3px;
+		&:hover {
+			text-decoration-thickness: 2px;
 		}
+		&:focus {
+			outline: none;
+			background: var(--color-accent);
+			color: white;
+			margin: -0.25rem;
+			padding: 0.25rem;
+		}
+	}
+	code.inline {
+		font-family: monospace;
+		background: #ddd;
+		color: #444;
+		border: 1px solid;
+		border-radius: 0.5rex;
+		padding: 0.2rex 0.2rch;
+	}
+	.footnotes {
+		list-style: decimal-leading-zero;
+	}
+	.footnote {
+		font-size: 0.7rem;
+		position: relative;
+		.footnote-meta {
+			position: absolute;
+			top: -0.25rem;
+			right: -2rem;
+		}
+	}
+	.footnote:target {
+		background: lightgoldenrodyellow;
+		border: 1px dashed;
+		margin: -1rem;
+		margin-bottom: 2rem;
+		padding: 1rem;
 	}
 }
