--- a/src/app.css
+++ b/src/app.css
@@ -80,21 +80,44 @@ article {
 	font-size: var(--font-size);
 	line-height: var(--line-height);
 	text-wrap: pretty;
+	:is(h1, h2, h3, h4, h5, h6) {
+		&:target {
+			background: lightgoldenrodyellow;
+			border: 1px dashed;
+			margin: -1rem;
+			margin-bottom: 2rem;
+			padding: 1rem;
+		}
+	}
 	h1 {
 		font-family: var(--font-merriweather);
 		font-weight: normal;
 		margin: 4rcap 0 2rcap 0;
 		text-transform: uppercase;
 	}
-	h2,
-	h3 {
+	h2 {
 		font-family: var(--font-fjalla);
 		font-size: 3rem;
 		font-weight: bold;
 		margin: 4rex 0 2rex 0;
+		text-shadow: 2px 2px white;
 	}
 	h3 {
 		font-size: 2rem;
+		font-family: var(--font-fjalla);
+		font-weight: semibold;
+	}
+	h4 {
+		font-size: 1.5rem;
+		font-family: var(--font-fjalla);
+		font-weight: medium;
+	}
+	h5 {
+		font-size: 1.2rem;
+		font-family: var(--font-fjalla);
+	}
+	h6 {
+		font-size: 0.8rem;
 	}
 	.cap:first-letter {
 		--repeating-linear-gradient: transparent 0, transparent 3px, var(--color-accent) 4px;
