--- a/src/app.css
+++ b/src/app.css
@@ -90,10 +90,11 @@ article {
 		}
 	}
 	h1 {
-		font-family: var(--font-merriweather);
-		font-weight: normal;
-		margin: 4rcap 0 2rcap 0;
-		text-transform: uppercase;
+		font-family: var(--font-fjalla);
+		font-size: 4rem;
+		font-weight: bold;
+		margin: 4rex 0 2rex 0;
+		text-shadow: 2px 2px white;
 	}
 	h2 {
 		font-family: var(--font-fjalla);
@@ -105,7 +106,9 @@ article {
 	h3 {
 		font-size: 2rem;
 		font-family: var(--font-fjalla);
-		font-weight: semibold;
+		font-weight: bold;
+		margin: 4rex 0 1rex 0;
+		text-shadow: 2px 2px white;
 	}
 	h4 {
 		font-size: 1.5rem;
